--- a/.github/workflows/ejercicio4.yml
+++ b/.github/workflows/ejercicio4.yml
@@ -1,26 +1,35 @@
 ﻿name: Ejercicio 4
+
 on:
   push:
     branches: [ main ]
+
 jobs:
-  test-multi-os:
+  ejercicio4:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+    
     runs-on: ${{ matrix.os }}
+
     steps:
       - name: Checkout del código
         uses: actions/checkout@v4
+      
       - name: Configurar Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "18"
+          
       - name: Instalar dependencias
         run: npm install
+
       - name: Ejecutar tests
         run: npm test
+        
       - name: Imprimir OS
         run: echo "Corriendo en ${{ runner.os }}"
+        
       - name: Solo en Linux
         if: runner.os == "Linux"
         run: echo "Este step solo aparece en Linux"
